@@ -615,6 +615,7 @@ Other memory:
 
 	* tools/Makefile.mkconfig: Under Cygwin, executable has a different name
 	* tools/mkdeps.sh & arch/arm/src/Makefile: Corrected a problem makeing dependencies
+	* tools/zipme.sh: Force directory name to be nuttx-xx.yy.zz
 	* Started m68322
 </pre></ul>
 
