@@ -23,7 +23,7 @@ o Signals
 - 'Standard' signals and signal actions are not supported.
 
 o pthreads
-- pthread_cancel():  Should implemenent cancellation points and pthread_testcancel()
+- pthread_cancel():  Should implement cancellation points and pthread_testcancel()
 
 o C++ Support
 - Need to call static constructors
@@ -33,12 +33,13 @@ o Network
 
 o USB
 - Implement USB device support
+- Implement USB bulk device
 
 o Libraries
 - sscanf() and lib_vsprintf() do not support floating point values.
 
 o File system
-- Add statfs(), chmod(), truncate().
+- Add chmod(), truncate().
 - FAT32: long file names
 
 o Console Output
@@ -79,3 +80,4 @@ o pjrc-8052 / MCS51
   clock_initialize.c at line 107
   pthread_create.c at 330
   sighand.c at 225 and 244
+
