@@ -180,5 +180,6 @@
 0.2.8 2007-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>
 	* tools/Makefile.mkconfig: Under Cygwin, executable has a different name
 	* tools/mkdeps.sh & arch/arm/src/Makefile: Corrected a problem makeing dependencies
+	* tools/zipme.sh: Force directory name to be nuttx-xx.yy.zz
 	* Started m68322
 
